--- a/website.html
+++ b/website.html
@@ -62,6 +62,33 @@
           genomen in de Sportcampus Zuiderpark. In het nieuwe sportcomplex zullen uiteindelijke circa 1.500 studenten les gaan krijgen.</li>
         
           <h1>Studies</h1>
+          <table>
+            <tr>
+              <th>Studie</th>
+              <th>Beschrijving</th>
+              <th>Email voor vragen</th>
+            </tr>
+            <tr>
+              <td>HBO-ICT</td>
+              <td>176</td>
+              <td>helphboict@hhs.nl</td>
+            </tr>
+            <tr>
+              <td>Finance & Control</td>
+              <td>241</td>
+              <td>helpfinandcon@hhs.nl</td>
+            </tr>
+          </table>
+          <form>
+            <label for="name"> Naam</label><br>
+            <input type="text" id="name" name="name" placeholder="Voer de naam in"><br>
+            <p><small>De officiële naam van de studie</small></p>
+            <label for="student">Aantal studenten</label><br> 
+            <input type="text" id="student" name="student" placeholder="Aantal"><br>
+            <label for="mail">Email voor hulp</label><br> 
+            <input type="text" id="mail" name="mail" placeholder="Voer email in">
+          </form>
+          <button type="button">Submit</button>
         </body>
     
 </html>
